--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+html {
+  font-size: 16px;
+}
+
+:root {
+  --black: #111517;
+  --white: white;
+  --backgroud: #fafafa;
+}
+
+body {
+  font-family: 'Nunito Sans', sans-serif;
+  color: var(--black)
+}
+
 .App {
   text-align: center;
 }
